Refactor OmniResponse properties into appropriate response classes

--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Model\Subdivision.cs" />
     <Compile Include="Model\Traits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\CityIspOrgResponse.cs" />
+    <Compile Include="Responses\CityResponse.cs" />
+    <Compile Include="Responses\CountryResponse.cs" />
     <Compile Include="Responses\OmniResponse.cs" />
     <Compile Include="WebServiceClient.cs" />
   </ItemGroup>
