--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -44,7 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeoIP2Exception.cs" />
+    <Compile Include="Exceptions\GeoIP2Exception.cs" />
+    <Compile Include="Exceptions\GeoIP2HttpException.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\Continent.cs" />
     <Compile Include="Model\Country.cs" />
