--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="2.6.2" targetFramework="net35" />
   <package id="RestSharp" version="104.1" targetFramework="net35" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net35" />
 </packages>
