Add address not found test

--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\GeoIP2AddressNotFoundException.cs" />
     <Compile Include="Exceptions\GeoIP2Exception.cs" />
     <Compile Include="Exceptions\GeoIP2HttpException.cs" />
     <Compile Include="Exceptions\GeoIP2InvalidRequestException.cs" />
