Add positive tests to improve test coverage, add IGeoIP2Provider interface

--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Exceptions\GeoIP2HttpException.cs" />
     <Compile Include="Exceptions\GeoIP2InvalidRequestException.cs" />
     <Compile Include="Exceptions\GeoIP2OutOfQueriesException.cs" />
+    <Compile Include="IGeoIP2Provider.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\Continent.cs" />
     <Compile Include="Model\Country.cs" />
