--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Model\Subdivision.cs" />
     <Compile Include="Model\Traits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\AbstractCityResponse.cs" />
+    <Compile Include="Responses\AbstractCountryResponse.cs" />
     <Compile Include="Responses\CityIspOrgResponse.cs" />
     <Compile Include="Responses\CityResponse.cs" />
     <Compile Include="Responses\CountryResponse.cs" />
