Install deps and use ToolsVersion that xbuild knows

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: c
 
 install:
   - sudo apt-get install mono-devel mono-gmcs nunit-console
+  - EnableNuGetPackageRestore=1 mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2/packages.config
+  - EnableNuGetPackageRestore=1 mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2.UnitTests/packages.config
 
 script:
   - xbuild
