More Travis/Mono fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: c
 
 install:
   - sudo apt-get install mono-devel mono-gmcs nunit-console
-  - EnableNuGetPackageRestore=1 mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2/packages.config
-  - EnableNuGetPackageRestore=1 mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2.UnitTests/packages.config
+  - mozroots --import --sync
+  - export EnableNuGetPackageRestore="true"
+  - mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2/packages.config
+  - mono --runtime=v4.0 .nuget/NuGet.exe install GeoIP2.UnitTests/packages.config
 
 script:
   - xbuild
