--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MaxMind.DB" version="0.1.0.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net35" />
-  <package id="RestSharp" version="104.1" targetFramework="net35" />
+  <package id="RestSharp" version="104.1" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net35" />
 </packages>
