--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MaxMind.GeoIP2</RootNamespace>
     <AssemblyName>MaxMind.GeoIP2</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -35,8 +35,15 @@
     <DocumentationFile>bin\Release\MaxMind.GeoIP2.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp">
-      <HintPath>..\packages\RestSharp.104.1\lib\net35\RestSharp.dll</HintPath>
+    <Reference Include="MaxMind.DB">
+      <HintPath>..\packages\MaxMind.DB.0.1.0.0\lib\net40\MaxMind.DB.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=104.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseReader.cs" />
     <Compile Include="Exceptions\GeoIP2AddressNotFoundException.cs" />
     <Compile Include="Exceptions\GeoIP2AuthenticationException.cs" />
     <Compile Include="Exceptions\GeoIP2Exception.cs" />
