--- a/GeoIP2/GeoIP2.nuspec
+++ b/GeoIP2/GeoIP2.nuspec
@@ -15,6 +15,8 @@
     <tags>geolocation</tags>
     <dependencies>
       <dependency id="RestSharp" version="104.1" />
+      <dependency id="Newtonsoft.Json" version="5.0.8" />
+      <dependency id="MaxMind.DB" version="0.1.0.0" />
     </dependencies>
   </metadata>
 </package>
