--- a/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
+++ b/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseReaderTests.cs" />
     <Compile Include="DeserializationTests.cs" />
     <Compile Include="NamedEntityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
