--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-language: c
+language: objective-c
 
-install:
-  - sudo apt-get install mono-devel mono-gmcs nunit-console
-  - mozroots --import --sync
-  - export EnableNuGetPackageRestore="true"
+before_install:
+ - wget http://download.mono-project.com/archive/3.2.3/macos-10-x86/MonoFramework-MDK-3.2.3.macos10.xamarin.x86.pkg
+ - sudo installer -pkg "MonoFramework-MDK-3.2.3.macos10.xamarin.x86.pkg" -target /
+ - export EnableNuGetPackageRestore="true"
+ - git submodule update --init --recursive
+ - mono --runtime=v4.0 .nuget/NuGet.exe install NUnit.Runners -Version 2.6.1 -o packages
 
 script:
   - xbuild
-  - nunit-console -framework=4.0.30319.1 ./GeoIP2.UnitTests/bin/Debug/MaxMind.GeoIP2.UnitTests.dll
+  - mono --runtime=v4.0 packages/NUnit.Runners.2.6.1/tools/nunit-console.exe ./GeoIP2.UnitTests/bin/Debug/MaxMind.GeoIP2.UnitTests.dll
 
 notifications:
   email:
