--- a/GeoIP2/GeoIP2.nuspec
+++ b/GeoIP2/GeoIP2.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>MaxMind.GeoIP2</id>
-    <version>0.1.1</version>
+    <version>$version$</version>
     <title>MaxMind GeoIP2</title>
     <authors>MaxMind Inc.</authors>
     <owners>MaxMind Inc.</owners>
@@ -16,7 +16,7 @@
     <dependencies>
       <dependency id="RestSharp" version="104.1" />
       <dependency id="Newtonsoft.Json" version="5.0.8" />
-      <dependency id="MaxMind.DB" version="0.1.0.0" />
+      <dependency id="MaxMind.Db" version="0.2.0.0" />
     </dependencies>
   </metadata>
 </package>
