--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ x64/
 *_p.c
 *.ilk
 *.meta
+*.nupkg
 *.obj
 *.pch
 *.pdb
@@ -59,7 +60,7 @@ _ReSharper*
 *.ncrunch*
 .*crunch*.local.xml
 
-# Installshield output folder 
+# Installshield output folder
 [Ee]xpress
 
 # DocProject is a documentation generator add-in
