--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -54,12 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseReader.cs" />
-    <Compile Include="Exceptions\GeoIP2AddressNotFoundException.cs" />
-    <Compile Include="Exceptions\GeoIP2AuthenticationException.cs" />
+    <Compile Include="Exceptions\AddressNotFoundException.cs" />
+    <Compile Include="Exceptions\AuthenticationException.cs" />
     <Compile Include="Exceptions\GeoIP2Exception.cs" />
-    <Compile Include="Exceptions\GeoIP2HttpException.cs" />
-    <Compile Include="Exceptions\GeoIP2InvalidRequestException.cs" />
-    <Compile Include="Exceptions\GeoIP2OutOfQueriesException.cs" />
+    <Compile Include="Exceptions\HttpException.cs" />
+    <Compile Include="Exceptions\InvalidRequestException.cs" />
+    <Compile Include="Exceptions\OutOfQueriesException.cs" />
     <Compile Include="IGeoIP2Provider.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\Continent.cs" />
