--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -36,8 +36,9 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaxMind.Db">
-      <HintPath>..\packages\MaxMind.Db.0.2.0.0\lib\net40\MaxMind.Db.dll</HintPath>
+    <Reference Include="MaxMind.Db, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MaxMind.Db.0.2.1.0\lib\net40\MaxMind.Db.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
