--- a/GeoIP2/GeoIP2.nuspec
+++ b/GeoIP2/GeoIP2.nuspec
@@ -1,22 +1,16 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>MaxMind.GeoIP2</id>
+    <id>$id$</id>
     <version>$version$</version>
-    <title>MaxMind GeoIP2</title>
-    <authors>MaxMind Inc.</authors>
-    <owners>MaxMind Inc.</owners>
-    <licenseUrl>https://github.com/maxmind/GeoIP2-dotnet/blob/master/LICENSE</licenseUrl>
+    <title>$title$</title>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
+    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
     <projectUrl>https://github.com/maxmind/GeoIP2-dotnet</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Currently, this distribution provides an API for the GeoIP2 web services.</description>
-    <releaseNotes>Initial release.</releaseNotes>
-    <copyright>Copyright 2013</copyright>
-    <tags>geolocation</tags>
-    <dependencies>
-      <dependency id="RestSharp" version="104.4.0" />
-      <dependency id="Newtonsoft.Json" version="5.0.8" />
-      <dependency id="MaxMind.Db" version="0.2.1.0" />
-    </dependencies>
+    <description>$description$</description>
+    <copyright>Copyright 2014</copyright>
+    <tags>MaxMind GeoIP GeoIP2 IP database geolocation</tags>
   </metadata>
 </package>
