Reorganize constructor params and prepare for 0.3.3

--- a/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
+++ b/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ResponseTests.cs" />
     <Compile Include="DatabaseReaderTests.cs" />
     <Compile Include="DeserializationTests.cs" />
     <Compile Include="NamedEntityTests.cs" />
