--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -78,8 +79,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responses\AbstractCityResponse.cs" />
     <Compile Include="Responses\AbstractCountryResponse.cs" />
+    <Compile Include="Responses\AbstractResponse.cs" />
     <Compile Include="Responses\CityIspOrgResponse.cs" />
     <Compile Include="Responses\CityResponse.cs" />
+    <Compile Include="Responses\IspResponse.cs" />
+    <Compile Include="Responses\ConnectionTypeResponse.cs" />
+    <Compile Include="Responses\DomainResponse.cs" />
     <Compile Include="Responses\CountryResponse.cs" />
     <Compile Include="Responses\OmniResponse.cs" />
     <Compile Include="WebServiceClient.cs" />
