--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: objective-c
 
 before_install:
- - wget http://download.mono-project.com/archive/3.2.3/macos-10-x86/MonoFramework-MDK-3.2.3.macos10.xamarin.x86.pkg
- - sudo installer -pkg "MonoFramework-MDK-3.2.3.macos10.xamarin.x86.pkg" -target /
- - export EnableNuGetPackageRestore="true"
- - git submodule update --init --recursive
- - mono --runtime=v4.0 .nuget/NuGet.exe install NUnit.Runners -Version 2.6.1 -o packages
+  - wget "http://download.mono-project.com/archive/3.8.0/macos-10-x86/MonoFramework-MDK-3.8.0.macos10.xamarin.x86.pkg"
+  - sudo installer -pkg "MonoFramework-MDK-3.8.0.macos10.xamarin.x86.pkg" -target /
+  - export EnableNuGetPackageRestore="true"
+  - git submodule update --init --recursive
+  - mono --runtime=v4.0 .nuget/NuGet.exe install NUnit.Runners -Version 2.6.1 -o packages
 
 script:
   - xbuild
