Apologies for not saving the project file.. when trying to fork and have new repo, i forgot the project file..

--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Exceptions\HttpException.cs" />
     <Compile Include="Exceptions\InvalidRequestException.cs" />
     <Compile Include="Exceptions\OutOfQueriesException.cs" />
+    <Compile Include="IGeoIP2DatabaseReader.cs" />
     <Compile Include="IGeoIP2Provider.cs" />
+    <Compile Include="IGeoIP2WebServicesClient.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\Continent.cs" />
     <Compile Include="Model\Country.cs" />
