Add demographic data to Insights. Other minor cleanup.

--- a/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
+++ b/GeoIP2.UnitTests/GeoIP2.UnitTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DeserializationTests.cs" />
     <Compile Include="NamedEntityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseHelper.cs" />
     <Compile Include="WebServiceClientTests.cs" />
   </ItemGroup>
   <ItemGroup>
