--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
-language: objective-c
+language: csharp
 
 before_install:
-  - wget "http://download.mono-project.com/archive/3.8.0/macos-10-x86/MonoFramework-MDK-3.8.0.macos10.xamarin.x86.pkg"
-  - sudo installer -pkg "MonoFramework-MDK-3.8.0.macos10.xamarin.x86.pkg" -target /
-  - export EnableNuGetPackageRestore="true"
   - git submodule update --init --recursive
-  - mono --runtime=v4.0 .nuget/NuGet.exe install NUnit.Runners -Version 2.6.1 -o packages
+  - nuget restore GeoIP2.sln
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 
 script:
   - xbuild
-  - mono --runtime=v4.0 packages/NUnit.Runners.2.6.1/tools/nunit-console.exe ./GeoIP2.UnitTests/bin/Debug/MaxMind.GeoIP2.UnitTests.dll
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./GeoIP2.UnitTests/bin/Debug/MaxMind.GeoIP2.UnitTests.dll
 
 notifications:
   email:
