--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,8 @@
+os: Visual Studio 2015 RC
+
 install:
  - git submodule update --init --recursive
+ - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 
 notifications:
   - provider: HipChat
