--- a/GeoIP2/packages.config
+++ b/GeoIP2/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MaxMind.Db" version="1.0.1.0" targetFramework="net4" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net4" userInstalled="true" />
-  <package id="RestSharp" version="105.1.0" targetFramework="net4" userInstalled="true" />
+  <package id="MaxMind.Db" version="1.1.0-beta1" targetFramework="net4" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
+  <package id="RestSharp" version="105.1.0" targetFramework="net4" />
 </packages>
