--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MaxMind.Db" version="1.1.0-beta1" targetFramework="net4" />
+  <package id="MaxMind.Db" version="1.1.0" targetFramework="net4" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
   <package id="NUnit" version="2.6.4" targetFramework="net4" />
   <package id="RestSharp" version="105.1.0" targetFramework="net4" />
