--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="MaxMind.Db" version="1.1.0" targetFramework="net4" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net4" />
@@ -6,6 +7,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net4" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net4" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
+  <package id="NSubstitute" version="1.8.2.0" targetFramework="net4" />
   <package id="NUnit" version="2.6.4" targetFramework="net4" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net4" />
+  <package id="RichardSzalay.MockHttp" version="1.2.1" targetFramework="net4" />
 </packages>
