--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 os: Visual Studio 2015 RC
 
+before_build:
+  - appveyor DownloadFile https://raw.githubusercontent.com/appveyor/ci/master/scripts/nuget-restore.cmd
+  - nuget-restore
+
 install:
  - git submodule update --init --recursive
  - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
