--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MaxMind.Db" version="1.2.0-beta1" targetFramework="net4" />
+  <package id="MaxMind.Db" version="1.2.0" targetFramework="net4" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net4" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net4" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net4" />
