--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,14 @@ os: Visual Studio 2015 RC
 before_build:
   - appveyor DownloadFile https://raw.githubusercontent.com/appveyor/ci/master/scripts/nuget-restore.cmd
   - nuget-restore
+  - nuget install NUnit.Console -version 3.0.0
 
 install:
  - git submodule update --init --recursive
  - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
+
+test_script:
+ - NUnit.Console.3.0.0\tools\nunit3-console.exe "C:\projects\geoip2-dotnet\GeoIP2.UnitTests\bin\Debug\MaxMind.GeoIP2.UnitTests.dll"
 
 notifications:
 - provider: Email
