--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ sudo: false
 notifications:
   email:
     recipients:
-      - dev@maxmind.com
+      - dev-ci@maxmind.com
     on_success: change
     on_failure: always
