--- a/GeoIP2/project.json
+++ b/GeoIP2/project.json
@@ -1,11 +1,11 @@
 ﻿{
-  "version": "2.6.0-*",
+  "version": "2.7.0-*",
   "description": "MaxMind GeoIP2 Database Reader and Web Service Client",
   "packOptions": {
     "authors": ["MaxMind, Inc."],
     "tags": [""],
     "projectUrl": "https://github.com/maxmind/GeoIP2-dotnet",
-    "licenseUrl": "https://github.com/maxmind/GeoIP2-dotnet/blob/v2.6.0/LICENSE",
+    "licenseUrl": "https://github.com/maxmind/GeoIP2-dotnet/blob/master/LICENSE",
     "copyright": "Copyright © 2013-2016"
   },
 
