--- a/MaxMind.GeoIP2.Benchmark/project.json
+++ b/MaxMind.GeoIP2.Benchmark/project.json
@@ -14,7 +14,7 @@
     "keyFile": "../MaxMind.snk"
   },
   "dependencies": {
-    "GeoIP2": "2.7.0-*"
+    "MaxMind.GeoIP2": "2.7.0-*"
   },
   "frameworks": {
     "net45": {},
