--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,10 +54,10 @@ build_script:
         $FrameworkLibsMoniker = "netstandard1.4"
       }
 
-      # Build projects 
-      dotnet build -c $env:Configuration -f $FrameworkLibsMoniker .\GeoIP2
-      dotnet build -c $env:Configuration -f $env:Framework .\GeoIP2.Benchmark
-      dotnet build -c $env:Configuration -f $env:Framework .\GeoIP2.UnitTests
+      # Build projects
+      dotnet build -c $env:Configuration -f $FrameworkLibsMoniker .\MaxMind.GeoIP2
+      dotnet build -c $env:Configuration -f $env:Framework .\MaxMind.GeoIP2.Benchmark
+      dotnet build -c $env:Configuration -f $env:Framework .\MaxMind.GeoIP2.UnitTests
 
 test_script:
   - ps: |
