--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,13 @@ env:
       Framework: netcoreapp1.0
 
 before_install:
+  # Install OpenSSL
+  - if test "$TRAVIS_OS_NAME" == "osx"; then
+      brew update;
+      brew install openssl;
+      brew link --force openssl;
+    fi
+
   # Download script to install dotnet cli
   - curl -L --create-dirs https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0/scripts/obtain/dotnet-install.sh -o ./scripts/install.sh
 
