--- a/GeoIP2/project.json
+++ b/GeoIP2/project.json
@@ -17,8 +17,8 @@
   },
 
   "dependencies": {
-    "MaxMind.Db": "2.1.0-beta3",
-    "Newtonsoft.Json": "8.0.3"
+    "MaxMind.Db": "2.1.1-*",
+    "Newtonsoft.Json": "9.0.1-beta1"
   },
 
   "frameworks": {
@@ -28,10 +28,26 @@
       }
     },
     "netstandard1.4": {
-      "imports": "dnxcore50",
       "dependencies": {
-        "Microsoft.CodeAnalysis.CSharp": "1.3.0-beta1-20160429-01",
-        "System.Net.Http": "4.1.0-rc3-24110-00"
+        "Microsoft.CSharp": "4.0.1-rc2-24027",
+        "System.Collections": "4.0.11-rc2-24027",
+        "System.Collections.Concurrent": "4.0.12-rc2-24027",
+        "System.Globalization": "4.0.11-rc2-24027",
+        "System.IO.MemoryMappedFiles": "4.0.0-rc2-24027",
+        "System.Linq": "4.1.0-rc2-24027",
+        "System.Linq.Expressions": "4.0.11-rc2-24027",
+        "System.Net.Http":  "4.0.1-rc2-24027",
+        "System.Net.Primitives": "4.0.11-rc2-24027",
+        "System.Net.Requests": "4.0.11-rc2-24027",
+        "System.Reflection": "4.1.0-rc2-24027",
+        "System.Reflection.Extensions": "4.0.1-rc2-24027",
+        "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
+        "System.Resources.ResourceManager": "4.0.1-rc2-24027",
+        "System.Runtime": "4.1.0-rc2-24027",
+        "System.Runtime.Extensions": "4.1.0-rc2-24027",
+        "System.Runtime.Numerics": "4.0.1-rc2-24027",
+        "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027",
+        "System.Threading": "4.0.11-rc2-24027"
       }
     }
   }
