--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,33 +5,14 @@ os: Visual Studio 2015
 
 environment:
   matrix:
-    - CLI_VERSION: Latest
-      Configuration: Debug
+    - Configuration: Debug
       Framework: net45
-    - CLI_VERSION: Latest
-      Configuration: Release
+    - Configuration: Release
       Framework: net45
-    - CLI_VERSION: Latest
-      Configuration: Debug
+    - Configuration: Debug
       Framework: netcoreapp1.0
-    - CLI_VERSION: Latest
-      Configuration: Release
+    - Configuration: Release
       Framework: netcoreapp1.0
-
-install:
-  # Download install script to install .NET cli in .dotnet dir
-  - ps: |
-      mkdir -f scripts/ > $null
-
-      # Download install script from CLI repo
-      wget https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0/scripts/obtain/dotnet-install.ps1 -OutFile .\scripts\install.ps1
-
-      $DOTNET_INSTALL_DIR = "$pwd\.dotnetcli"
-
-      .\scripts\install.ps1 -Channel preview -version $env:CLI_VERSION -InstallDir "$DOTNET_INSTALL_DIR" -NoPath
-
-      # add dotnet to PATH
-      $env:Path = "$DOTNET_INSTALL_DIR;$env:Path"
 
 build_script:
   - git submodule update --init --recursive
@@ -45,7 +26,7 @@ build_script:
         exit 1
       }
 
-      # dotnet restore
+      # Restore packages
       dotnet restore
 
       if($env:Framework -eq "net45") {
