--- a/GeoIP2/project.json
+++ b/GeoIP2/project.json
@@ -30,25 +30,25 @@
     },
     "netstandard1.4": {
       "dependencies": {
-        "Microsoft.CSharp": "4.0.1-rc2-24027",
-        "System.Collections": "4.0.11-rc2-24027",
-        "System.Collections.Concurrent": "4.0.12-rc2-24027",
-        "System.Globalization": "4.0.11-rc2-24027",
-        "System.IO.MemoryMappedFiles": "4.0.0-rc2-24027",
-        "System.Linq": "4.1.0-rc2-24027",
-        "System.Linq.Expressions": "4.0.11-rc2-24027",
-        "System.Net.Http": "4.0.1-rc2-24027",
-        "System.Net.Primitives": "4.0.11-rc2-24027",
-        "System.Net.Requests": "4.0.11-rc2-24027",
-        "System.Reflection": "4.1.0-rc2-24027",
-        "System.Reflection.Extensions": "4.0.1-rc2-24027",
-        "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
-        "System.Resources.ResourceManager": "4.0.1-rc2-24027",
-        "System.Runtime": "4.1.0-rc2-24027",
-        "System.Runtime.Extensions": "4.1.0-rc2-24027",
-        "System.Runtime.Numerics": "4.0.1-rc2-24027",
-        "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027",
-        "System.Threading": "4.0.11-rc2-24027"
+        "Microsoft.CSharp": "4.0.1",
+        "System.Collections": "4.0.11",
+        "System.Collections.Concurrent": "4.0.12",
+        "System.Globalization": "4.0.11",
+        "System.IO.MemoryMappedFiles": "4.0.0",
+        "System.Linq": "4.1.0",
+        "System.Linq.Expressions": "4.1.0",
+        "System.Net.Http": "4.1.0",
+        "System.Net.Primitives": "4.0.11",
+        "System.Net.Requests": "4.0.11",
+        "System.Reflection": "4.1.0",
+        "System.Reflection.Extensions": "4.0.1",
+        "System.Reflection.TypeExtensions": "4.1.0",
+        "System.Resources.ResourceManager": "4.0.1",
+        "System.Runtime": "4.1.0",
+        "System.Runtime.Extensions": "4.1.0",
+        "System.Runtime.Numerics": "4.0.1",
+        "System.Runtime.Serialization.Primitives": "4.1.1",
+        "System.Threading": "4.0.11"
       }
     }
   }
