--- a/GeoIP2.UnitTests/project.json
+++ b/GeoIP2.UnitTests/project.json
@@ -3,20 +3,7 @@
   "name": "MaxMind.GeoIP2.UnitTests",
   "description": "Test project to validate MaxMind GeoIP2 Database Reader and Web Service Client",
 
-  "packOptions": {
-    "authors": ["MaxMind, Inc."],
-    "tags": [""],
-    "projectUrl": "https://github.com/maxmind/GeoIP2-dotnet",
-    "licenseUrl": "https://github.com/maxmind/GeoIP2-dotnet/blob/master/LICENSE",
-    "copyright": "Copyright © 2013-2016"
-  },
-
-  "commands": {
-    "test": "MaxMind.GeoIP2.UnitTests"
-  },
-
   "buildOptions": {
-    "emitEntryPoint": true,
     "keyFile": "../MaxMind.snk"
   },
 
@@ -24,14 +11,17 @@
     "GeoIP2": {
       "target": "project"
     },
-    "NUnitLite": "3.2.1",
+    "NUnit": "3.4.0",
+    "dotnet-test-nunit": "3.4.0-beta-1",
     "MockHttpSigned": "1.3.0-netstandard-alpha3"
   },
 
+  "testRunner": "nunit",
+
   "frameworks": {
-    "net45": {},
+    "net451": {},
     "netcoreapp1.0": {
-      "imports": "dnxcore50",
+      "imports": "portable-net45+win8",
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
